--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,7 +14,11 @@
     "@element-plus/icons-vue": "^2.3.1",
     "axios": "^1.8.4",
     "element-plus": "^2.9.7",
+    "nprogress": "^0.2.0",
     "pinia": "^3.0.1",
+    "pinia-plugin-persist": "^1.0.0",
+    "sass": "^1.86.2",
+    "screenfull": "^6.0.2",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0"
   },
